hands-on/Maven/maven-01-using-maven-as-a-build-tool/maven-java-template.yml
AWSTemplateFormatVersion: 2010-09-09

Description: >
  This Cloudformation Template creates an EC2 Instance with Java-11 and Maven.
  Amazon Linux 2023 (ami-067d1e60475437da2) will be used as an EC2 Instance with
  custom security group allowing SSH connections from anywhere on port 22.

Parameters:
  KeyPairName:
    Description: Enter the name of your Key Pair for SSH connections.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must one of the existing EC2 KeyPair

Resources:
  MavenJavaSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: SG for ssh
      GroupName: sec-grp-ssh
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Cfn-Sec-Grp
  EC2Maven:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-067d1e60475437da2
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !Ref MavenJavaSecurityGroup 
      Tags:
        -
          Key: Name
          Value: !Sub instance of ${AWS::StackName}
      UserData:
        Fn::Base64: !Sub |
          #! /bin/bash
          yum update -y
          yum install java-11-amazon-corretto-devel -y
          cd /home/ec2-user/
          wget https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz
          tar -zxvf $(ls | grep apache-maven-*-bin.tar.gz)
          rm -rf $(ls | grep apache-maven-*-bin.tar.gz)
          echo "M2_HOME=/home/ec2-user/$(ls | grep apache-maven)" >> /home/ec2-user/.bash_profile
          echo 'export PATH=$PATH:$M2_HOME/bin' >> /home/ec2-user/.bash_profile
